tui/src/chatwidget/snapshots/rexux_tui__chatwidget__tests__model_picker_refreshes_auto_models.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Select Model
  Pick a quick auto mode or browse all models.

  1. rexux-auto-test       Auto model
› 2. All models (current)  Choose a specific model and reasoning level
                           (current: gpt-5.2)

  Press enter to confirm or esc to go back
